<resources>
    <string name="app_name">Fittime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name_default">Name polzovatel</string>

    <string name="setting_text_account">Аккаунт</string>
    <string name="text_setting_phone_default">+79156478143</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить данные аккаунта</string>

    <!--Блок О себе-->
    <string name="text_setting_about_me">О себе</string>

    <string name="text_setting_sex">Пол</string>
    <string name="text_setting_sex_defauit">Муж</string>
    <string name="settings_label_sex">Нажмите, чтобы указать ваш пол</string>

    <string name="text_setting_birthday">Дата рождения</string>
    <string name="text_setting_birthday_defauit">28.03.1991</string>
    <string name="settings_label_birthday">Нажмите, чтобы указать вашу дату рождения</string>

    <string name="text_setting_growth">Ваш рост, см</string>
    <string name="text_setting_growth_defauit">174см</string>
    <string name="settings_label_growth">Нажмите, чтобы указать ваш рост</string>

    <string name="text_setting_weight">Ваш вес, кг</string>
    <string name="text_setting_weight_defauit">72 кг</string>
    <string name="settings_label_weight">Нажмите, чтобы указать ваш вес</string>


    <string name="text_setting_customization">Настройки</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_register_image">register_image</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">+- --- --- ----</string>
    <string name="setting_menu_change_name">Изменить</string>
    <string name="Settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Имя пользователя</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--Питание-->
    <string name="text_alarm">Время обеда</string>
    <string name="setting_lable_coffee">Нажмите чтобы указать время приема пищи</string>
    <string name="text_setting_breakfast">Завтрак</string>
    <string name="text_setting_lunch">Ланч</string>
    <string name="text_setting_dinner">Обед</string>
    <string name="text_setting_supper">Ужин</string>
    <string name="text_setting_late_supper">Поздний ужин</string>
    <string name="text_setting_afternoon_snack">Полдник</string>

    <!--Таймер тренировки-->
    <string name="_30sec">30 секунд</string>
    <string name="_60sec">60 секунд</string>
    <string name="_2min">2 минуты</string>
    <string name="myTimer">Свое время</string>

</resources>