<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Fragment.ChangeNameFragment">

    <EditText
        android:id="@+id/settings_input_name"
        style="@style/editText"
        android:inputType="text"
        android:hint="@string/Settings_hint_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_input_surname"
        style="@style/editText"
        android:inputType="text"
        android:hint="@string/settings_hint_input_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_input_name" />

    <TextView
        android:id="@+id/setting_text_sex"
        style="@style/normalText"
        android:text="@string/text_setting_sex"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/large_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/settings_input_surname"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        style="@style/normalText"
        android:inputType="text"
        android:entries="@array/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_text_sex"/>

    <TextView
        android:id="@+id/setting_text_birthday"
        style="@style/normalText"
        android:text="@string/text_setting_birthday"
        android:layout_marginVertical="@dimen/large_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/setting_text_sex"
        app:layout_constraintStart_toStartOf="parent"
         />
 
    <TextView
        android:id="@+id/setting_birthday"
        style="@style/normalText"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/text_setting_birthday_defauit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_text_birthday" />

    <TextView
        android:id="@+id/setting_text_growth"
        style="@style/normalText"
        android:text="@string/text_setting_growth"
        android:layout_marginVertical="@dimen/large_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/setting_text_birthday"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/setting_growth"
        style="@style/normalText"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/text_setting_growth_defauit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_text_growth" />

    <TextView
        android:id="@+id/setting_text_weight"
        style="@style/normalText"
        android:text="@string/text_setting_weight"
        android:layout_marginVertical="@dimen/large_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/setting_text_growth"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/setting_weight"
        style="@style/normalText"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/text_setting_weight_defauit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/setting_text_weight" />


</androidx.constraintlayout.widget.ConstraintLayout>